--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,55 +1,79 @@
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=20
+separator_block_width=15
 markup=none
-
-[volume]
-label=VOL
-label=♪
-instance=Master
-interval=5
-signal=10
-color=#DC322F
-
-[memory]
-label=РАМ
-label=≣
-interval=30
-color=#B58900
-
-[disk]
-label=ДИСК
-label=≈
-interval=30
-color=#fdff00
-
-[iface]
-label=Ω
-color=#33CC99
-interval=10
-
-[wifi]
-interval=10
-
-[cpu_usage]
-label=CPU
-label=♛
-interval=10
-color=#268BD2
-
-[battery]
-label=BAT
-label=☇
-instance=1
-interval=30
-color=#9933CC
 
 [spotify]
 full_text=
 command=exec spotify
 color=#23CF5F
 
+#[weather]
+#instance=3647651
+#interval=60
+
+[volume]
+label=VOL
+label=
+instance=Master
+interval=5
+signal=10
+color=#DC322F
+
+[disk-home]
+label=
+command=/usr/share/i3blocks/disk $HOME
+instance=/home/redaced
+interval=30
+
+[memory]
+label=РАМ
+label=
+interval=30
+color=#B58900
+
+#[disk]
+#label=ДИСК
+#label=
+#interval=30
+#color=#fdff00
+
+#[iface]
+#label=Ω
+#color=#33CC99
+#interval=10
+
+[temp]
+label=
+command=echo `sensors -A | grep -oP '^Core.+?  \+\K\d+' | awk '{k+=$1}END{print k/NR}'` °C
+interval=10
+
+[wifi]
+label=
+command=/usr/share/i3blocks/wifi
+instance=wlp2s0
+interval=10
+
+[cpu_usage]
+label=CPU
+label=
+interval=10
+color=#268BD2
+
+#[battery]
+#label=BAT
+#label=☇
+#instance=1
+#interval=30
+#color=#9933CC
+
+#[spotify]
+#full_text=
+#command=exec spotify
+#color=#23CF5F
+
 [time]
-command=date '+%m-%d %H:%M'
+label=
+command=date '+ %H:%M'
 interval=60
 color=#7c560c
 
@@ -60,6 +84,6 @@ color=#7c560c
 #interval=5
 #signal=10
 
-[temperature]
-interval=10
-color=#00f404
+#[temperature]
+#interval=10
+#color=#00f404
