--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,10 +2,15 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+#[spotify]
+#full_text=
+#command=exec spotify
+#color=#23CF5F
 [spotify]
-full_text=
-command=exec spotify
-color=#23CF5F
+label=
+command=~/.config/i3/spotify.py
+color=#81b71a
+interval=5
 
 #[weather]
 #instance=3647651
