fix title utf-8 in spotify.py

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -8,13 +8,14 @@ markup=none
 #color=#23CF5F
 [spotify]
 label=
-command=~/.config/i3/spotify.py
+command=~/.config/i3/blocks/spotify.py
 color=#81b71a
 interval=5
 
-#[weather]
-#instance=3647651
-#interval=60
+[weather]
+#command=~/.config/i3/weather.sh
+instance=2028462
+interval=60
 
 [volume]
 label=VOL
@@ -28,7 +29,7 @@ color=#DC322F
 [disk-home]
 label=
 command=/usr/share/i3blocks/disk $HOME
-instance=$HOME
+instance=/home/redaced
 interval=30
 color=#fff
 
@@ -67,12 +68,13 @@ interval=10
 
 [cpu_usage]
 label=CPU
+command=/usr/share/i3blocks/cpu_usage
 label=
-interval=10
+interval=5
 color=#268BD2
 
 [battery]
-command=~/.config/i3/battery.sh
+command=~/.config/i3/blocks/battery.sh
 #instance=1
 interval=30
 color=#9933CC
